<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".FlitsDashboard.StoreCredits.StoreCredits">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/flitstoolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:contentInsetStart="0dp"
                android:contentInsetLeft="0dp"
                android:contentInsetEnd="0dp"
                android:contentInsetRight="0dp"
                android:contentInsetStartWithNavigation="0dp"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_scrollFlags="scroll|enterAlways"
                app:theme="@style/AppTheme"
                >
                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/mycredits"
                    android:visibility="visible"
                />
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/title_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:visibility="gone"
            android:padding="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">


            <TextView

                android:id="@+id/balancetitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Manage Credits"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsregular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
 />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/getcredit_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/new_round_corner"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/title_section">

            <TextView
                android:id="@+id/earned_credit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/earned_credits"
                android:textAllCaps="true"
                android:fontFamily="@font/poppinsregular"
                app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
          />
            <TextView
                android:id="@+id/earned_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="0"
                android:fontFamily="@font/poppinsregular"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/earned_credit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

             />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spentcredit_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/new_round_corner"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/getcredit_section">

            <TextView
                android:id="@+id/spent_credit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:text="@string/spent_credits"
                android:fontFamily="@font/poppinsregular"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
      />
            <TextView
                android:id="@+id/spent_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="0"
                android:fontFamily="@font/poppinsregular"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/spent_credit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
               />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/currentcredit_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/new_round_corner"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/spentcredit_section">

            <TextView
                android:id="@+id/current_credit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/current_credits"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
      />
            <TextView
                android:id="@+id/current_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsregular"
                android:text="0"
                android:textColor="@color/black"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/current_credit_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:padding="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/new_round_corner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentcredit_section">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/transaction_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/white"
            android:padding="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tansaction_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/recent_transaction"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="@font/poppinsregular"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/line"
            android:layout_margin="5dp"
            android:padding="20dp"
            android:background="@color/mdtp_dark_gray"
            app:layout_constraintTop_toBottomOf="@id/transaction_section"
            android:layout_marginTop="5dp"


            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/transaction_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/line">

            <TextView
                android:id="@+id/Dr_CR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppinsregular"
                android:text="DR/CR"
                android:textAllCaps="true"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
             />
            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/reason"
                android:textColor="@color/black"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/Dr_CR"
                app:layout_constraintStart_toStartOf="parent"
              />
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/credit_date"
                android:textColor="@color/black"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/summary"
                app:layout_constraintStart_toStartOf="parent"
              />
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:id="@+id/line2"
                android:layout_margin="5dp"
                android:background="@color/gray_color"
                app:layout_constraintTop_toBottomOf="@id/date"
                android:layout_marginTop="5dp"


                />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/transaction_header"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginTop="5dp"
       />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</layout>
